hero section on progress

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Open+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&family=Volkhov:wght@400;700&display=swap');
+
+
+
 body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 .hero {
@@ -8,19 +13,71 @@ body {
 
 }
 
+h1,
+h2 {
+    font-family: 'Volkhov', serif;
+}
+
+h3 {
+    font-family: 'Poppins', sans-serif;
+}
+
+
 
 nav {
     border: 2px solid red;
-
+    width: 100%;
+    display: flex;
     position: absolute;
     z-index: 10;
+    justify-content: space-around;
+    align-items: center;
 }
 
-nav ul {}
 
-nav ul li {}
 
-nav ul li a {}
+nav ul {
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+nav ul li {
+    list-style: none;
+    justify-content: center;
+    font-family: 'Open Sans', sans-serif;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #212832;
+    font-weight: 700;
+    text-transform: capitalize;
+    font-size: 1rem;
+}
+
+nav ul select,
+nav ul select option {
+    border: none;
+    text-decoration: none;
+    color: #212832;
+    font-weight: 700;
+    background-color: transparent;
+    text-transform: capitalize;
+    font-size: 1rem;
+}
+
+nav ul li :hover {
+    color: #bb4be8;
+}
+
+nav button {
+    border: 2px solid #212832;
+    border-radius: 5px;
+    padding: 1em 1.5em;
+    background-color: transparent;
+}
 
 
 
@@ -41,7 +98,7 @@ nav ul li a {}
 
 .hero .shape {
     position: absolute;
-    right: -100px;
+    right: -110px;
     top: -109px;
     overflow: hidden;
 }
