--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,9 @@ body {
 }
 
 .hero {
+
     position: relative;
+    border: 2px solid blue;
 
 }
 
@@ -25,11 +27,8 @@ h3 {
 
 
 nav {
-    border: 2px solid red;
     width: 100%;
     display: flex;
-    position: absolute;
-    z-index: 10;
     justify-content: space-around;
     align-items: center;
 }
@@ -92,6 +91,7 @@ nav button {
     filter: blur(85px);
     left: -329px;
     top: -18px;
+    z-index: -1;
     overflow: hidden;
 
 }
@@ -100,5 +100,30 @@ nav button {
     position: absolute;
     right: -110px;
     top: -109px;
-    overflow: hidden;
+    z-index: -1;
+
+}
+
+nav i {
+    display: none !important;
+    padding: 5px;
+}
+
+@media only screen and (max-width: 1100px) {
+    nav {
+        justify-content: space-between;
+    }
+
+    .logo {
+        padding: 5px;
+    }
+
+    nav i {
+        cursor: pointer;
+        display: block !important;
+    }
+
+    nav ul {
+        display: none;
+    }
 }
