--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Open+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&family=Volkhov:wght@400;700&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 
 body {
-    margin: 0;
-    padding: 0;
+
     overflow-x: hidden;
 }
 
@@ -18,6 +22,7 @@ body {
 h1,
 h2 {
     font-family: 'Volkhov', serif;
+
 }
 
 h3 {
@@ -29,6 +34,7 @@ h3 {
 nav {
     width: 100%;
     display: flex;
+    padding: 1em 0;
     justify-content: space-around;
     align-items: center;
 }
@@ -59,6 +65,24 @@ nav ul li,
 #mobile-menu ul {
     padding: 0;
 }
+
+
+#mobile-menu-button,
+#menu-close-button {
+    font-size: 1.5rem;
+    padding: .5em;
+    display: none !important;
+    cursor: pointer;
+}
+
+#mobile-menu-button:hover,
+#menu-close-button:hover {
+    background-color: #2d2d2d;
+    border-radius: 50%;
+    color: #fff;
+}
+
+
 
 nav ul li a,
 #mobile-menu ul li a {
@@ -113,27 +137,39 @@ nav button {
 
 .hero .shape {
     position: absolute;
-    right: -110px;
-    top: -109px;
+    right: -44px;
+    top: -159px;
     z-index: -1;
 
 }
 
-#mobile-menu-button,
-#menu-close-button {
+.hero-content {
+    margin: 0 auto;
+    width: 80%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-content h1 {
+    font-size: 5.5rem;
+    position: relative;
+    z-index: 1;
+}
+
+.hero-content h1::after {
+    content: url("/assests/images/vector.svg");
+    position: absolute;
+    top: 5px;
+    right: 96px;
+    z-index: -1;
+}
+
+.hero-content h3 {
+    color: #DF6951;
     font-size: 1.5rem;
-    padding: .5em;
-    display: none !important;
-    cursor: pointer;
 }
-
-#mobile-menu-button:hover,
-#menu-close-button:hover {
-    background-color: #2d2d2d;
-    border-radius: 50%;
-    color: #fff;
-}
-
 
 @media only screen and (max-width: 1100px) {
     nav {
