--- a/styles/style.css
+++ b/styles/style.css
@@ -152,13 +152,15 @@ nav button {
     align-items: center;
 }
 
-.hero-content h1 {
+.hero-title-section {}
+
+.hero-title-section h1 {
     font-size: 5.5rem;
     position: relative;
     z-index: 1;
 }
 
-.hero-content h1::after {
+.hero-title-section h1::after {
     content: url("/assests/images/vector.svg");
     position: absolute;
     top: 5px;
@@ -166,9 +168,92 @@ nav button {
     z-index: -1;
 }
 
-.hero-content h3 {
+
+.hero-title-section p {
+    font-weight: 500;
+    font-size: 1.2rem;
+    line-height: 30px;
+    color: #5E6282;
+    width: 68%;
+    margin-bottom: 1.5em;
+}
+
+.hero-title-section .fa-play {
+    color: #fff;
+    display: inline-block;
+    padding: 0.8em;
+    border-radius: 50%;
+    margin-left: 4em;
+    font-size: 1.2em;
+    box-shadow: 0px 15px 30px rgba(223, 105, 81, 0.3);
+    background-color: #DF6951;
+}
+
+.hero-title-section button {
+    display: inline-block;
+    font-family: 'Google Sans';
+    border: none;
+    background-color: #F1A501;
+    box-shadow: 0px 20px 35px rgba(241, 165, 1, 0.15);
+    border-radius: 10px;
+    padding: 1.2em 2em;
+}
+
+.hero-title-section button a {
+    color: #fff;
+    font-size: 1.2rem;
+    text-decoration: none;
+}
+
+
+.hero-title-section h3 {
     color: #DF6951;
     font-size: 1.5rem;
+}
+
+
+
+@media only screen and (max-width: 1280px) {
+    nav ul {
+        width: 60%;
+    }
+
+    .hero {
+        overflow: hidden;
+    }
+
+    .hero .shape {
+        right: -134px;
+        top: -182px;
+
+    }
+
+    .hero-content {
+        width: 100%;
+    }
+
+    .hero-title-section {
+        padding: 5em;
+    }
+
+    .hero-title-section h1 {
+        font-size: 3rem;
+    }
+
+    .hero-content .banner-image {
+        width: 100%;
+    }
+
+    .hero-title-section h1::after {
+        top: 5px;
+        right: -174px;
+    }
+
+    .hero-title-section h3 {
+        font-size: 1rem;
+    }
+
+
 }
 
 @media only screen and (max-width: 1100px) {
@@ -182,7 +267,6 @@ nav button {
     }
 
     #mobile-menu-button {
-
         display: block !important;
     }
 
@@ -226,7 +310,72 @@ nav button {
         text-align: center;
     }
 
+
+    .hero {
+        overflow: hidden;
+    }
+
     .hero .shape {
-        right: -410px;
+        right: -134px;
+        top: -182px;
+
+    }
+
+    .hero-content {
+        width: 100%;
+    }
+
+    .hero-title-section {
+        padding: 2em;
+    }
+
+    .hero-title-section h1 {
+        font-size: 2rem;
+    }
+
+    .hero-content .banner-image img {
+        width: 80%;
+    }
+
+    .hero-title-section h1::after {
+        top: 12px;
+        right: 0;
+        width: 80%;
+
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+
+    .hero-content .banner-image img {
+        width: 100%;
+    }
+
+    .hero-title-section h1::after {
+        right: 200px;
+        width: 100%;
+    }
+
+    .hero .shape {
+        right: -467px;
+        top: -208px;
+    }
+}
+
+
+@media only screen and (max-width: 709px) {
+    .hero .shape {
+        right: -480px;
+        top: -294px;
+    }
+
+    .hero-content {
+        grid-template-columns: 1fr;
+    }
+
+
+    .hero-content .banner-image img {
+        width: 80%;
     }
 }
