--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Open+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&family=Volkhov:wght@400;700&display=swap');
 
+
 * {
     margin: 0;
     padding: 0;
@@ -10,6 +11,7 @@
 body {
 
     overflow-x: hidden;
+    position: relative;
 }
 
 .hero {
@@ -40,7 +42,8 @@ nav {
 }
 
 #mobile-menu {
-    background-color: #fff1da9b;
+    background-color: #fff1dacc;
+    z-index: 10;
     width: 100%;
     transition: .5s ease-in;
     position: absolute;
@@ -152,7 +155,6 @@ nav button {
     align-items: center;
 }
 
-.hero-title-section {}
 
 .hero-title-section h1 {
     font-size: 5.5rem;
@@ -178,7 +180,7 @@ nav button {
     margin-bottom: 1.5em;
 }
 
-.hero-title-section .fa-play {
+#play-video {
     color: #fff;
     display: inline-block;
     padding: 0.8em;
@@ -187,6 +189,44 @@ nav button {
     font-size: 1.2em;
     box-shadow: 0px 15px 30px rgba(223, 105, 81, 0.3);
     background-color: #DF6951;
+    cursor: pointer !important;
+}
+
+#modal {
+    width: 100%;
+    height: 50vh;
+    position: absolute;
+    top: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.335);
+    transition: 1s ease-in;
+}
+
+#modal iframe {
+    width: 50%;
+    height: 720px;
+    display: block;
+    position: relative;
+
+}
+
+
+#close-modal {
+    font-weight: 400;
+    position: absolute;
+    z-index: 9;
+    top: 10%;
+    right: 23%;
+    font-size: 24px;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 50px;
+    cursor: pointer;
+
 }
 
 .hero-title-section button {
@@ -230,175 +270,4 @@ nav button {
     top: 22px;
     right: 44px;
     z-index: -1;
-}
-
-
-@media only screen and (max-width: 1280px) {
-    nav ul {
-        width: 60%;
-    }
-
-    .hero {
-        overflow: hidden;
-    }
-
-    .hero .shape {
-        right: -134px;
-        top: -182px;
-
-    }
-
-    .hero-content {
-        width: 100%;
-    }
-
-    .hero-title-section {
-        padding: 5em;
-    }
-
-    .hero-title-section h1 {
-        font-size: 3rem;
-    }
-
-
-
-    .hero-content .banner-image .plane {
-        display: inline-block;
-        margin-top: 550px;
-    }
-
-    .hero-title-section h1::after {
-        top: 5px;
-        right: -174px;
-    }
-
-    .hero-title-section h3 {
-        font-size: 1rem;
-    }
-
-
-}
-
-@media only screen and (max-width: 1100px) {
-    nav {
-
-        justify-content: space-between;
-    }
-
-    .logo {
-        padding: .5em;
-    }
-
-    #mobile-menu-button {
-        display: block !important;
-    }
-
-
-
-    nav ul {
-        display: none;
-    }
-
-    #mobile-menu {
-        display: block;
-        padding: 1em 0;
-    }
-
-    #mobile-menu ul {
-        text-align: center;
-    }
-
-    #mobile-menu ul li {
-
-        margin-top: .2em;
-        padding: 1rem 0px;
-    }
-
-    #mobile-menu ul li:hover {
-
-        background-color: #b9b3c7;
-    }
-
-    #mobile-menu ul li:hover a {
-        color: white;
-    }
-
-    #mobile-menu button {
-        background-color: transparent;
-        border: none;
-    }
-
-    #mobile-menu select {
-        margin-top: 1em;
-        text-align: center;
-    }
-
-
-    .hero {
-        overflow: hidden;
-    }
-
-    .hero .shape {
-        right: -134px;
-        top: -182px;
-
-    }
-
-    .hero-content {
-        width: 100%;
-    }
-
-    .hero-title-section {
-        padding: 2em;
-    }
-
-    .hero-title-section h1 {
-        font-size: 2rem;
-    }
-
-    .hero-content .banner-image img {
-        width: 80%;
-    }
-
-    .hero-title-section h1::after {
-        top: 12px;
-        right: 0;
-        width: 80%;
-
-    }
-}
-
-
-@media only screen and (max-width: 768px) {
-
-    .hero-content .banner-image img {
-        width: 100%;
-    }
-
-    .hero-title-section h1::after {
-        right: 200px;
-        width: 100%;
-    }
-
-    .hero .shape {
-        right: -467px;
-        top: -208px;
-    }
-}
-
-
-@media only screen and (max-width: 709px) {
-    .hero .shape {
-        right: -480px;
-        top: -294px;
-    }
-
-    .hero-content {
-        grid-template-columns: 1fr;
-    }
-
-
-    .hero-content .banner-image img {
-        width: 80%;
-    }
 }
