--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,9 @@
     box-sizing: border-box;
 }
 
+:root {
+    --content-text: #5E6282;
+}
 
 body {
 
@@ -27,7 +30,8 @@ h2 {
 
 }
 
-h3 {
+h3,
+p {
     font-family: 'Poppins', sans-serif;
 }
 
@@ -109,17 +113,27 @@ nav ul select option,
     font-size: 1rem;
 }
 
-nav ul li :hover {
+nav ul li:hover {
     color: #bb4be8;
 }
+
+
+
 
 nav button {
     border: 2px solid #212832;
     border-radius: 5px;
+    text-transform: capitalize;
     padding: 1em 1.5em;
+    font-weight: 600;
     background-color: transparent;
 }
 
+nav button:hover {
+    border: 2px solid transparent;
+    background-color: #212832;
+    color: #fff;
+}
 
 
 
@@ -175,7 +189,7 @@ nav button {
     font-weight: 500;
     font-size: 1.2rem;
     line-height: 30px;
-    color: #5E6282;
+    color: var(--content-text);
     width: 68%;
     margin-bottom: 1.5em;
 }
@@ -192,9 +206,19 @@ nav button {
     cursor: pointer !important;
 }
 
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 #modal {
     width: 100%;
-    height: 50vh;
+    height: 100vh;
     position: absolute;
     top: 0;
     display: none;
@@ -203,8 +227,11 @@ nav button {
     height: 100vh;
     z-index: 2;
     background-color: rgba(0, 0, 0, 0.335);
-    transition: 1s ease-in;
+    animation: fadeIn 1s;
+
 }
+
+
 
 #modal iframe {
     width: 50%;
@@ -270,4 +297,59 @@ nav button {
     top: 22px;
     right: 44px;
     z-index: -1;
+}
+
+
+
+
+.service-section {
+    margin-top: 8em;
+    text-align: center;
+    position: relative;
+}
+
+.service-section .sub-heading {
+    color: var(--content-text);
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+.service-section h1 {
+    text-transform: capitalize;
+    color: #14183E;
+    padding: 0.3em;
+    font-size: 3rem;
+}
+
+.service-section .pluses {
+    position: absolute;
+    padding: 0 4em;
+    top: 0;
+    right: 0;
+}
+
+.services {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 0px;
+    margin: 0 auto;
+    margin-top: 5em;
+}
+
+.single-service {
+    margin: 0 auto;
+    text-transform: capitalize;
+}
+
+.single-service h3 {
+    font-family: Open Sans;
+    margin-top: 2em;
+}
+
+.single-service p {
+    font-size: 1rem;
+    width: 35%;
+    margin: 0 auto;
+    font-weight: 500;
 }
